syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message GetRecipePolicyRequest {
  string recipeId = 1;
}

message GetRecipePolicyResponse {
  string ownerId = 1;
  string visibility = 2;
  bool isEncrypted = 3;
}
